<resources>
    <string name="app_name" translatable="false">My Budget</string>

    <string name="app_exit_dialog_content">Are you sure you want to exit?</string>

    <string name="dialog_wait_content">Please wait…</string>

    <string name="dialog_permission_mandatory_title">Permissions mandatory</string>
    <string name="dialog_permission_mandatory_content">All the permissions are required for this app</string>

    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="log_with_social_account">Log with your social account</string>
    <string name="log_with_app_account">or with your My Bugdet account</string>

    <string name="login_in_progress">Login in progress…</string>
    <string name="login_successful">Login successful</string>
    <string name="login_invalid_credential">Invalid username or password</string>
    <string name="login_error">Error during user login, please try again later</string>

    <string name="registration_in_progress">Registration in progress…</string>
    <string name="registration_error">Error during user registration</string>
    <string name="registration_successfully">Registration made successfully</string>

    <string name="facebook">Facebook</string>
    <string name="facebook_signin_title">Facebook Sign-In</string>

    <string name="google">Google</string>
    <string name="google_signin_title">Google Sign-In</string>

    <string name="signed_in">Signed in</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="sign_in_error">Error during sign in process</string>
    <string name="id">ID %s</string>
    <string name="no_email_permission">Email permission not granted</string>

    <string name="settings">Settings</string>
    <string name="movements">Movements</string>

    <string name="last_movements">Last movements</string>

    <string name="incoming">Incoming</string>
    <string name="incoming_singular">Incoming</string>
    <string name="expense">Expense</string>
    <string name="expense_singular">Expense</string>
    <string name="balance">Balance</string>

    <string name="invalid_data">Data entered invalid</string>

    <string name="error">Error</string>
    <string name="error_try_later">Error during the operation, please try again later</string>

    <string name="saving_movement">Saving movement…</string>
    <string name="saving_movement_error">Error when saving movement</string>
    <string name="remove_movement_dialog_text">Are you sure you want to delete the movement?</string>

    <string name="loading_dashboard">Loading dashboard…</string>
    <string name="loading_dashboard_error">Error when loading account details</string>

    <string name="searching_users">Searching users…</string>
    <string name="searching_users_error">Error when searching users</string>

    <string name="sending_user_invite">Sending invite to user…</string>
    <string name="sending_user_invite_error">Error when sending invite</string>
    <string name="sending_user_invite_successfull">User invitation sent successfully</string>

    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="note">Note</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="account">Account</string>
    <string name="members">Members</string>
    <string name="admin">Admin</string>
    <string name="scheduled">Scheduled</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="frequency">Frequency</string>
    <string name="movement_type">Type</string>
    <string name="spent">Spent</string>
    <string name="alertThreshold">Alert threshold</string>

    <string name="notification_push">Push notification</string>
    <string name="notification_mail">Email notification</string>

    <string name="save_action">Save</string>
    <string name="new_f_action">New</string>
    <string name="new_m_action">New</string>
    <string name="edit_action">Edit</string>
    <string name="refresh_action">Refresh</string>
    <string name="search_action">Search</string>
    <string name="delete_action">Delete</string>

    <string name="chart_type_summary">Summary</string>
    <string name="chart_type_expense">Expense</string>
    <string name="chart_type_incoming">Incoming</string>
    <string name="chart_type_details">Details</string>

    <string name="or">or</string>

    <string name="all_f">All</string>
    <string name="all_m">All</string>
    <string name="all_categories">All categories</string>

    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>

    <string name="search_parameters">Search parameters</string>

    <string name="go_to_month_search">Go to full month search</string>

    <string name="others">Others</string>

    <string name="no_results_found">No results found</string>

    <string name="user">User</string>

    <string name="invite_user">Invite user</string>
    <string name="intite_user_confirm_dialog_title">Choice confirmation</string>
    <string name="intite_user_confirm_dialog_message">Send to %s the invitation to join the %s account?</string>

    <string name="account_select">Select an account</string>

    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>

    <string name="user_pending_invite_loading">User pending invite loading…</string>
    <string name="user_pending_invite_error">Error when loading pending invite…</string>

    <string name="confirmation_sent">Confirmation sent</string>
    <string name="declined_sent">Declined sent</string>
    <string name="reply_sending">Sending reply…</string>
    <string name="reply_send_error">Error when send reply</string>

    <string name="account_saving">Account saving</string>
    <string name="account_saving_error">Error when saving account</string>
    <string name="account_saving_successful">Account save successful</string>
    <string name="accounts_loading">Loading accounts</string>
    <string name="account_details_loading">Loading account details…</string>
    <string name="account_details_loading_error">Error when loading account details</string>

    <string name="kick">Kick</string>
    <string name="member_kicking_dialog_title">Kick member</string>
    <string name="member_kicking_dialog_message">Are you sure you want to remove %s from account %s?</string>
    <string name="member_kicking">Member kicking</string>
    <string name="member_kicking_error">Error when kicking member</string>

    <string name="leave">Leave</string>
    <string name="account_leaving_dialog_title">Leave account</string>
    <string name="account_leaving_dialog_message">Are you sure you want leave account %s?</string>
    <string name="account_leaving">Account leaving</string>
    <string name="account_leaving_error">Error when leaving account</string>

    <string name="role_changing">Role changing</string>
    <string name="role_changing_error">Error when changing role</string>

    <string name="scheduled_movements_loading">Scheduled movements loading</string>
    <string name="scheduled_movements_loading_error">Error when loading scheduled movements</string>
    <string name="no_scheduled_movements">No scheduled movements found</string>
    <string name="scheduled_movement_saving">Scheduled movement saving</string>

    <string name="remove_scheduled_movement_dialog_text">Are you sure you want to delete the scheduled movement?</string>

    <string name="budgets_account_loading">Loading budgets</string>
    <string name="budget_deleting">Deleting budget</string>
    <string name="budget_saving">Saving budget</string>
    <string name="no_budgets_found">No budgets found</string>

    <string name="remove_budget_dialog_text">Are you sure you want to delete the budget?</string>
</resources>
