<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_group_movements"
        android:title="@string/movements">
        <menu>
            <item
                android:id="@+id/nav_search_movements"
                android:icon="@drawable/search"
                android:title="@string/search_action" />
            <item
                android:id="@+id/nav_auto_movements"
                android:icon="@drawable/schedule"
                android:title="@string/scheduled" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/exit"
        android:title="@string/sign_out" />

</menu>
